camel-tracing - Do not use deprecated code