@@ -16,8 +16,8 @@
  */
 package org.apache.camel.tracing.decorators;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -79,11 +79,7 @@ public class RestSpanDecorator extends AbstractHttpSpanDecorator {
                     path = path.substring(0, index);
                 }
                 path = path.replace(":", "");
-                try {
-                    path = URLDecoder.decode(path, "UTF-8");
-                } catch (UnsupportedEncodingException e) {
-                    LOG.debug("Failed to decode URL path '{}', ignoring exception", path, e);
-                }
+                path = URLDecoder.decode(path, StandardCharsets.UTF_8);
             }
         }
         return path;
